--- a/som valley.html
+++ b/som valley.html
@@ -325,7 +325,7 @@
             
             <div class="contact-info">
                 <h3>Contact Information</h3>
-                <p><strong>Address:</strong> 123 Preschool Lane, Som Valley, ST 45678</p>
+                <p><strong>Address:</strong> m2 ground floor som valley ramakrishna vihar appartment   </p>
                 <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
                 <p><strong>Email:</strong> <a href="mailto:info@somvalleypreschool.com">info@somvalleypreschool.com</a></p>
                 <h3>Follow Us</h3>
