--- a/som valley.html
+++ b/som valley.html
@@ -326,8 +326,8 @@
             <div class="contact-info">
                 <h3>Contact Information</h3>
                 <p><strong>Address:</strong> m2 ground floor som valley ramakrishna vihar appartment   </p>
-                <p><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-                <p><strong>Email:</strong> <a href="mailto:info@somvalleypreschool.com">info@somvalleypreschool.com</a></p>
+                <p><strong>Phone:</strong> <a href="tel:+919891804883">9891804883</a></p>
+                <p><strong>Email:</strong> <a href="mailto:kjayarkv@gmail.com">kjayarkv@gmail.com</a></p>
                 <h3>Follow Us</h3>
                 <p>
                     <a href="https://www.facebook.com/SomValleyPreschool" target="_blank">Facebook</a> | 
